--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -138,7 +138,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: pack
     if: startsWith(github.ref, 'refs/tags/v')
+    # Job-level permissions must repeat both — job-level block replaces top-level entirely.
     permissions:
+      contents: read
       packages: write
 
     steps:
@@ -152,11 +154,10 @@ jobs:
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: ${{ env.DOTNET_VERSION }}
-          source-url: https://nuget.pkg.github.com/gzviadauri-dev/index.json
-        env:
-          NUGET_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Push to GitHub Packages
+        # GITHUB_TOKEN is the only auth needed — do not also pass source-url in setup-dotnet,
+        # which creates a duplicate NuGet source entry and can cause 403s on new repos.
         run: |
           dotnet nuget push ./artifacts/nuget/*.nupkg \
             --api-key ${{ secrets.GITHUB_TOKEN }} \
